2005-01-16  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: renamed default image title
	and statusbar format as suggested in bug #150679.

2005-01-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/curve_bend.c: applied patch from Jan Heller that
	fixes broken expose event handling (bug #164207).

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpchannel.c: implement GimpItem::convert(). Handles
	any drawable, including conversion to GRAY, flattening and
	resizing.

	* app/widgets/gimpchanneltreeview.c: implement dropping of all
	kinds of drawables as new channels. Fixes bug #158133.

	Simplified component dropping by removing stuff which is done by
	gimp_item_convert() now.

2005-01-15  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-transform.c
	* app/paint-funcs/scale-funcs.c: minor cleanups to the new Lanczos
	interpolation routines. Drawable transformations do still crash :(

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-dnd.[ch]: added new function
	gimp_display_shell_dnd_init() which connects all DND callbacks.
	Made all DND callbacks static.

	* app/display/gimpdisplayshell.c (gimp_display_shell_init): call
	above function instead of connecting all DND callbacks here. Removed
	lots of now unused #includes.

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpitem.c
	* app/core/gimpdrawable.c
	* app/vectors/gimpvectors.c: made GimpItem::scale() and ::resize()
	work on unattached items.

	* app/widgets/gimplayertreeview.c
	(gimp_layer_tree_view_drop_component): fix drop index.

	* app/widgets/gimpchanneltreeview.c: implement dropping of
	components as new channels. Fixes bug #158483.

2005-01-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainertreeview.[ch]: added virtual function
	GimpContainerTreeView::drop_component(). Added EEKy "dnd_gimp"
	needed for gimp_selection_data_get_component().
